# Bawably

./: .gitignore  CMakeLists.txt  README.md
docs/: Activity Diagram.drawio  (+4 more)
src/Application/: CMakeLists.txt
src/Application/UseCases/: IUseCase.h
src/Application/UseCases/Expense/: CreateExpenseUseCase.cpp  CreateExpenseUseCase.h  GetExpensesByBuildingUseCase.cpp  GetExpensesByBuildingUseCase.h  GetTotalExpensesByBuildingAndMonthUseCase.cpp  GetTotalExpensesByBuildingAndMonthUseCase.h
src/Domain/: CMakeLists.txt
src/Domain/Apartment/: Apartment.cpp  Apartment.h  ApartmentStatus.cpp  ApartmentStatus.h
src/Domain/Apartment/Exceptions/: ApartmentAlreadyExistsException.cpp  ApartmentAlreadyExistsException.h  ApartmentAlreadyRentedException.cpp  ApartmentAlreadyRentedException.h  ApartmentNotExistException.cpp  ApartmentNotExistException.h
src/Domain/Building/: Building.cpp  Building.h
src/Domain/Building/Exceptions/: BuildingNotExistException.cpp  BuildingNotExistException.h
src/Domain/Expense/: Expense.cpp  Expense.h  ExpenseCategory.h  ExpenseRepository.h
src/Domain/Expense/Exceptions/: ExpenseNotFoundException.cpp  ExpenseNotFoundException.h  InvalidBuildingIdForExpenseException.cpp  InvalidBuildingIdForExpenseException.h  InvalidExpenseAmountException.cpp  InvalidExpenseAmountException.h  InvalidExpenseCategoryException.cpp  InvalidExpenseCategoryException.h  InvalidExpenseDateException.cpp  InvalidExpenseDateException.h
src/Domain/MaintenanceRequest/: MaintenanceRequest.cpp  MaintenanceRequest.h  MaintenanceStatus.h
src/Domain/MaintenanceRequest/Exceptions/: MaintenanceRequestAlreadyClosedException.cpp  MaintenanceRequestAlreadyClosedException.h  MaintenanceRequestNotFoundException.cpp  MaintenanceRequestNotFoundException.h
src/Domain/RentPayment/: PaymentStatus.h  RentPayment.cpp  RentPayment.h
src/Domain/RentPayment/Exceptions/: InvalidMonthException.h  InvalidPaymentAmountException.cpp  InvalidPaymentAmountException.h  InvalidYearException.h  PaymentCreationFailedException.cpp  PaymentCreationFailedException.h  PaymentExceedsExpectedException.cpp  PaymentExceedsExpectedException.h  PaymentRecordExistsException.cpp  PaymentRecordExistsException.h  PaymentUpdateFailedException.cpp  PaymentUpdateFailedException.h
src/Domain/RentalContract/: RentalContract.cpp  RentalContract.h
src/Domain/RentalContract/Exceptions/: ContractAlreadyExistsException.cpp  ContractAlreadyExistsException.h  ContractAlreadyTerminatedException.cpp  ContractAlreadyTerminatedException.h  ContractCreationFailedException.cpp  ContractCreationFailedException.h  ContractUpdateFailedException.cpp  ContractUpdateFailedException.h  NoActiveContractException.cpp  NoActiveContractException.h  RentalContractNotFoundException.cpp  RentalContractNotFoundException.h
src/Domain/Report/: ExpenseStatistics.h  GlobalBuildingReport.cpp  GlobalBuildingReport.h  MonthlyBuildingReport.cpp  MonthlyBuildingReport.h  OccupancyStatistics.h  RevenueStatistics.h
src/Domain/Report/Exceptions/: InvalidBuildingIdException.cpp  InvalidBuildingIdException.h  ReportGenerationFailedException.cpp  ReportGenerationFailedException.h
src/Domain/Shared/: CurrentDate.cpp  CurrentDate.h  DomainException.cpp  DomainException.h  InvalidMonthException.cpp  InvalidMonthException.h  InvalidYearException.cpp  InvalidYearException.h
src/Domain/Tenant/: Tenant.cpp  Tenant.h
src/Domain/User/: Owner.cpp  Owner.h  TenantUser.cpp  TenantUser.h  User.cpp  User.h
src/Domain/User/Exceptions/: InvalidCredentialsException.cpp  InvalidCredentialsException.h  TenantAlreadyExistsException.cpp  TenantAlreadyExistsException.h  TenantNotExistException.cpp  TenantNotExistException.h  TenantUserAlreadyExists.cpp  TenantUserAlreadyExists.h  TenantUserCreationFailedException.cpp  TenantUserCreationFailedException.h  TenantUserNotFound.cpp  TenantUserNotFound.h  UsernameAlreadyTakenException.cpp  UsernameAlreadyTakenException.h
src/Infrastructure/: CMakeLists.txt
src/Infrastructure/Apartment/Repositories/: InMemoryApartmentRepository.cpp  InMemoryApartmentRepository.h
src/Infrastructure/Building/Repositories/: BuildingRepository.cpp  BuildingRepository.h
src/Infrastructure/Expense/Repositories/: InMemoryExpenseRepository.cpp  InMemoryExpenseRepository.h
src/Infrastructure/MaintenanceRequest/Repositories/: InMemoryMaintenanceRequestRepository.cpp  InMemoryMaintenanceRequestRepository.h  MaintenanceRequestRepository.cpp  MaintenanceRequestRepository.h
src/Infrastructure/RentPayment/Repositories/: InMemoryRentPaymentRepository.cpp  InMemoryRentPaymentRepository.h
src/Infrastructure/RentalContract/Repositories/: InMemoryRentalContractRepository.cpp  InMemoryRentalContractRepository.h
src/Infrastructure/Tenant/Repositories/: InMemoryTenantRepository.cpp  InMemoryTenantRepository.h
src/Infrastructure/User/Repositories/: InMemoryUserRepository.cpp  InMemoryUserRepository.h  UserRepository.h
src/Presentation/: CMakeLists.txt  main.cpp
src/Presentation/Container/: DependencyContainer.cpp  DependencyContainer.h
src/Presentation/Controllers/: UserController.h
src/Presentation/Controllers/ApartmentController/: ApartmentController.cpp  ApartmentController.h
src/Presentation/Controllers/AuthController/: AuthController.cpp  AuthController.h
src/Presentation/Controllers/BuildingController/: BuildingController.cpp  BuildingController.h
src/Presentation/Controllers/ExpenseController/: ExpenseController.cpp  ExpenseController.h
src/Presentation/Controllers/MaintenanceRequestController/: MaintenanceRequestController.cpp  MaintenanceRequestController.h
src/Presentation/Controllers/OwnerMenuController/: OwnerMenuController.cpp  OwnerMenuController.h
src/Presentation/Controllers/RentPaymentController/: RentPaymentController.cpp  RentPaymentController.h
src/Presentation/Controllers/RentalContractController/: RentalContractController.cpp  RentalContractController.h
src/Presentation/UI/: ConsoleUtils.cpp  ConsoleUtils.h  InputForm.cpp  InputForm.h  MenuDisplayer.cpp  MenuDisplayer.h  TextEditor.cpp  TextEditor.h
(+90 files in other folders)
